--- a/index.html
+++ b/index.html
@@ -3,27 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Выбор изделия</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <title>Mon Site Web</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body class="bg-gray-100">
-    <div class="container mx-auto text-center py-12">
-        <h1 class="text-4xl font-bold mb-8">Выберите изделие</h1>
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-            <div class="bg-white p-6 rounded-lg shadow-lg">
-                <h2 class="text-2xl font-semibold mb-4">Сбш</h2>
-                <a href="sbsh.html" class="text-blue-500 font-bold">Подробнее</a>
-            </div>
-            <div class="bg-white p-6 rounded-lg shadow-lg">
-                <h2 class="text-2xl font-semibold mb-4">Q800</h2>
-                <a href="q800.html" class="text-blue-500 font-bold">Подробнее</a>
-            </div>
-            <div class="bg-white p-6 rounded-lg shadow-lg">
-                <h2 class="text-2xl font-semibold mb-4">Универсал 900</h2>
-                <a href="universal900.html" class="text-blue-500 font-bold">Подробнее</a>
-            </div>
-        </div>
-    </div>
+<body>
+    <h1>Bienvenue sur mon site web</h1>
+    <p>Ceci est un exemple de site web hébergé sur GitHub Pages.</p>
 </body>
 </html>
-
